add button card

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         </div>
     </header>
 
+    <div class="card-slide" id="button-slide">
+        <button class="button" id="task-button">Add task</button>
+        <button class="button" id="section-button">Add section</button>
+    </div>
 
-    <section id="button-section">
-
-
-    </section>
 
     <section id="todo-list-section">
 
